# motor_riesgo

./: .gitignore  README.md  dvc.yaml
backend/: .dockerignore  .gitignore  Dockerfile  audit.py  catboost_thin_file.cbm  inference.py  inference_real_data.py  main.py  metrics.json  mlflow_tracking.py  model.py  pyproject.toml  requirements.txt  shap_report.py  simulador.py  tabla_comparativa.py
frontend/: next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/consentimiento/: page.tsx
frontend/app/datos/: page.tsx
frontend/app/evaluacion/pilar1/: page.tsx
frontend/app/evaluacion/pilar2/: page.tsx
frontend/app/evaluacion/pilar3/: page.tsx
frontend/app/evaluacion/pilar4/: page.tsx
frontend/app/loading-screen/: page.tsx
frontend/app/morosidad/: page.tsx
frontend/app/resultado/: page.tsx
frontend/components/: ThemeToggle.tsx
frontend/lib/: api.ts
