[tool.poetry]
name = "motor-riesgo-backend"
version = "1.0.0"
description = "Motor predictivo de viabilidad crediticia conductual para perfiles thin-file"
authors = ["Martinez Flores Alejandro Javier", "Jaramillo Jaramillo Fred Roland"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.136.3"
uvicorn = {extras = ["standard"], version = "0.49.0"}
pydantic = "2.13.4"
catboost = "1.2.10"
polars = "1.41.2"
pandas = "2.3.3"
numpy = "2.4.6"
scipy = "1.17.1"
scikit-learn = "1.9.0"
shap = "0.51.0"
pyodbc = "5.3.0"
matplotlib = "3.11.0"
imbalanced-learn = "0.14.2"
mlflow = "3.13.0"
python-dotenv = "1.2.2"
psycopg2-binary = "^2.9.12"
gunicorn = "^26.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
dvc = "3.55.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"